# oplot

./: ISSUE_ANALYSIS.md  README.md  setup.cfg
.github/workflows/: ci.yml
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  table_of_contents.html
docs/_modules/: index.html
docs/_modules/oplot/: matrix.html  multi_plot.html  multiplots.html  outlier_scores.html  plot_audio.html  plot_data_set.html  plot_stats.html  ui_scores_mapping.html  util.html
docs/_sources/module_docs/oplot/: my.rst.txt  plot_stats.rst.txt  ui_scores_mapping.rst.txt  util.rst.txt
docs/module_docs/: oplot.html
docs/module_docs/oplot/: matrix.html  multi_plot.html  multiplots.html  my.html  outlier_scores.html  plot_audio.html  plot_data_set.html  plot_stats.html  ui_scores_mapping.html  util.html
docsrc/: index.rst  table_of_contents.rst
docsrc/module_docs/: oplot.rst
docsrc/module_docs/oplot/: matrix.rst  multi_plot.rst  multiplots.rst  outlier_scores.rst  plot_audio.rst  plot_data_set.rst
github/workflow/: ci.yml
oplot/: __init__.py  distributions.py  matrix.py  multi_plot.py  multiplots.py  my.py  outlier_scores.py  plot_audio.py  plot_data_set.py  plot_mappings.py  plot_stats.py  sequences.py  ui_scores_mapping.py  util.py
tests/: __init__.py  test_distributions.py  test_matrix.py  test_multiplots.py  test_outlier_scores.py  test_plot_data_set.py  test_plot_mappings.py  test_plot_stats.py
