[metadata]
name = oplot
version = 0.0.3
url = https://github.com/otosense/oplot
platforms = any
description_file = README.md
root_url = https://github.com/otosense/
license = apache-2.0
author = OtoSense
description = Plotting tools for audio analysis
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = oplot

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	matplotlib
	scikit-learn
	numpy
	six
	pandas

